--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
   </script>
 </head>
 
-<body>
+<body id="main">
   <!--左侧菜单栏-->
   <div id="left">
     <!-- logo -->
@@ -29,7 +29,7 @@
     </div>
     <!-- 用户信息 -->
     <div class="panel panel-default center-block">
-      <div class="panel-heading" data-toggle="collapse" data-target="#user">
+      <div class="panel-heading" data-toggle="collapse" data-target="#user" >
         <strong>
           个人信息 <span class="caret"></span></span>
         </strong>
@@ -38,23 +38,68 @@
         <div class="panel-body">
           <p class="row">
             <strong class="col-xs-4">姓名</strong>
-            <span class="col-xs-8">易烊千玺</span>
+            <span class="col-xs-8">{{user.userName}}</span>
           </p>
           <p class="row">
             <strong class="col-xs-4">职称</strong>
-            <span class="col-xs-8">偶像</span>
+            <span class="col-xs-8">{{user.professionTitle}}</span>
           </p>
           <p class="row">
             <strong class="col-xs-4">简介</strong>
-            <span class="col-xs-8">始于颜值，陷于才华，忠于人品,美貌与智慧并存</span>
+            <span class="col-xs-8">{{user.introduction}}</span>
           </p>
           <p class="row">
             <strong class="col-xs-4">手机</strong>
-            <span class="col-xs-8">12345678910</span>
+            <span class="col-xs-8">{{user.phone}}</span>
           </p>
-          <button type="button" class="bth btn-default btn-xs col-xs-10 col-xs-offset-1">
+          <button type="button" class="bth btn-default btn-xs col-xs-10 col-xs-offset-1"  data-toggle="modal" data-target="#userMsgCheck">
           修改
           </button>
+        </div>
+      </div>
+    </div>
+    <!--修改模拟弹出框-->
+    <div class="modal fade" id="userMsgCheck" tabindex="-1" role="dialog" aria-labelledby="gridSystemModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close" aria-hidden="true">&times;</button>
+            <h4 class="modal-title">修改个人信息</h4>
+          </div>
+          <div class="modal-body">
+            <div class="container-fluid">
+              <form class="form-horizontal" action="/api/user" method="post">
+                <div class="form-group ">
+                  <label for="eName" class="col-xs-3 control-label">姓名：</label>
+                  <div class="col-xs-8 ">
+                    <input type="text" class="form-control input-sm" id="eName" name="userName" v-model="user.userName">
+                  </div>
+                </div>
+                <div class="form-group">
+                  <label for="eLink" class="col-xs-3 control-label">职称：</label>
+                  <div class="col-xs-8 ">
+                    <textarea class="form-control input-sm" id="eLink" name="professionTitle"v-model="user.professionTitle"></textarea>
+                  </div>
+                </div>
+                <div class="form-group">
+                  <label for="eOrd" class="col-xs-3 control-label">简介：</label>
+                  <div class="col-xs-8">
+                    <textarea class="form-control input-sm" id="eOrd" name="introduction"v-model="user.introduction"></textarea>
+                  </div>
+                </div>
+                <div class="form-group">
+                  <label for="eKnot" class="col-xs-3 control-label">手机：</label>
+                  <div class="col-xs-8">
+                    <input type="number" class="form-control input-sm" id="eKnot" name="phone" v-model="user.phone">
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-xs btn-white" data-dismiss="modal">取 消</button>
+            <input type="submit" value="保存"  class="btn btn-xs btn-xs btn-success"  data-dismiss="modal">
+          </div>
         </div>
       </div>
     </div>
@@ -86,7 +131,7 @@
     <!-- 教师信息 -->
     <div role="tabpanel" class="tab-pane active" id="teachers">
       <div class="head addBtn">
-        <button v-if="roleId==1" type="button" class=" btn btn-yellow bthAdd" data-toggle="modal" data-target="#addTeachers">
+        <button v-if="role_id==1" type="button" class=" btn btn-yellow bthAdd" data-toggle="modal" data-target="#addTeachers">
           添加用户
         </button>
       </div>
@@ -120,11 +165,11 @@
             <td>{{item.phone}}</td>
             <td>
               <button v-on:click=checkUser(item.user_id) type="button" class="btn btn-success btn-xs" data-toggle="modal" data-target="#checkTeachers">查看</button>
-              <div class="btn-group" v-if="roleId==1">
+              <div class="btn-group" v-if="role_id==1">
                 <button type="button" class="btn btn-warning btn-xs " data-toggle="modal" data-target="#changeTeachers">修改</button>
                 <button type="button" class="btn btn-danger btn-xs" data-toggle="modal" data-target="#deleteTeachers">删除</button>
-                <button type="button" class="btn btn-xs "  v-bind:class="{hidden:item.roleId==2}">删除管理员</button>
-                <button type="button" class="btn btn-xs btn-while" v-bind:class="{hidden:item.roleId==1 }">添加管理员</button>
+                <button type="button" class="btn btn-xs "  v-bind:class="{hidden:item.role_id==2}" v-on:click=deleteUser(item.user_id)>删除管理员</button>
+                <button type="button" class="btn btn-xs btn-while" v-bind:class="{hidden:item.role_id==1 }" v-on:click=deleteUser(item.user_id)>添加管理员</button>
               </div>
             </td>
             </td>
@@ -259,7 +304,7 @@
                   <div class="form-group ">
                     <label for="tName" class="col-xs-3 control-label">姓名：</label>
                     <div class="col-xs-8 ">
-                      <input type="text" class="form-control input-sm" id="tName" name="userName">
+                      <input type="text" class="form-control input-sm" id="tName" name="userName" >
                     </div>
                   </div>
                   <div class="form-group">
@@ -323,7 +368,7 @@
     <!-- 监考信息 -->
     <div role="tabpanel" class="tab-pane " id="invigilate">
       <div class="head addBtn">
-        <button v-if="roleId==1" type="button" class=" btn btn-yellow bthAdd" data-toggle="modal" data-target="#addInvigilate">
+        <button v-if="role_id==1" type="button" class=" btn btn-yellow bthAdd" data-toggle="modal" data-target="#addInvigilate">
           添加监考信息
         </button>
       </div>
@@ -357,11 +402,10 @@
             <td>{{item.needCount}}</td>
             <td>
               <button v-on:click=checkUser(item.user_id) type="button" class="btn btn-success btn-xs" data-toggle="modal" data-target="#checkInvigilate">查看</button>
-              <div class="btn-group" v-if="roleId==1">
+              <div class="btn-group" v-if="role_id==1">
                 <button type="button" class="btn btn-xs "  v-bind:class="{hidden:item.status==2}">已分配</button>
                 <button type="button" class="btn btn-xs btn-while" v-bind:class="{hidden:item.status==1 }">分配</button>
                 <button type="button" class="btn btn-warning btn-xs " data-toggle="modal" data-target="#changeInvigilate">修改</button>
-                <button type="button" class="btn btn-danger btn-xs" data-toggle="modal" data-target="#deleteInvigilate">删除</button>
               </div>
             </td>
             </td>
